# ChangeLog for dev-util/cucumber-rails
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-util/cvs-repo/gentoo-x86/dev-util/cucumber-rails/ChangeLog,v 1.4 2010/01/15 09:57:37 graaff Exp $

*cucumber-rails-0.2.3-r1 (15 Jan 2010)

  15 Jan 2010; Hans de Graaff <graaff@gentoo.org>
  +cucumber-rails-0.2.3-r1.ebuild,
  +files/cucumber-rails-0.2.3-fix-broken-logic.patch:
  Add patch already applied upstream to make scenarios without transactions
  work again.

*cucumber-rails-0.2.3 (03 Jan 2010)

  03 Jan 2010; Hans de Graaff <graaff@gentoo.org>
  +cucumber-rails-0.2.3.ebuild:
  Minor bug fix and new feature.

*cucumber-rails-0.2.2 (22 Dec 2009)

  22 Dec 2009; Hans de Graaff <graaff@gentoo.org>
  +cucumber-rails-0.2.2.ebuild:
  Version bump with minor bugfixes.

*cucumber-rails-0.2.1 (18 Dec 2009)

  18 Dec 2009; Hans de Graaff <graaff@gentoo.org>
  +cucumber-rails-0.2.1.ebuild, +metadata.xml:
  Initial import. Spun off from dev-util/cucumber.
