@@ -1,6 +1,11 @@
 # ChangeLog for dev-util/cucumber
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-util/cvs-repo/gentoo-x86/dev-util/cucumber/ChangeLog,v 1.21 2010/01/14 16:16:10 ranger Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-util/cvs-repo/gentoo-x86/dev-util/cucumber/ChangeLog,v 1.22 2010/01/20 07:19:51 graaff Exp $
+
+*cucumber-0.6.2 (20 Jan 2010)
+
+  20 Jan 2010; Hans de Graaff <graaff@gentoo.org> +cucumber-0.6.2.ebuild:
+  Version bump.
 
   14 Jan 2010; Brent Baude <ranger@gentoo.org> cucumber-0.6.1.ebuild:
   Marking cucumber-0.6.1 ~ppc for bug 300739
